docling/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: docling
  name: docling
  namespace: docling
spec:
  replicas: 1
  selector:
    matchLabels:
      service: docling
  template:
    metadata:
      labels:
        service: docling
    spec:
      containers:
        - name: docling
          image: quay.io/docling-project/docling-serve:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "200Mi"
              cpu: "25m"
            limits:
              # High memory needed to handle large files
              memory: "4Gi"
              cpu: "2"
