docling/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: docling
  name: docling
  namespace: docling
spec:
  ports:
    - name: "ui"
      port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    service: docling
