docling/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docling-ingress
  namespace: docling
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1000M"
spec:
  ingressClassName: nginx
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docling
            port:
              number: 5001
  tls:
  - hosts:
    - ${DOMAIN}
    secretName: ${CERTIFICATE_SECRET_NAME}
